--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -87,7 +87,7 @@
     <Compile Include="Linq\AssertionKind.cs" />
     <Compile Include="Linq\Expression\TextExpression.cs" />
     <Compile Include="Linq\QuantifierExpression\CountFromQuantifier.cs" />
-    <Compile Include="Linq\GroupExpression\BalancingGroupExpression.cs" />
+    <Compile Include="Linq\GroupExpression\BalanceGroupExpression.cs" />
     <Compile Include="Linq\BuildContext.cs" />
     <Compile Include="Linq\AnchorExpression\StartOfInput.cs" />
     <Compile Include="Linq\GroupExpression\QuantifierSubexpression.cs" />
