--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -51,17 +51,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Linq\AnchorExpression\AnchorExpression.cs" />
-    <Compile Include="Linq\AnchorExpression\EndOrBeforeEndingNewLine.cs" />
-    <Compile Include="Linq\AnchorExpression\NotWordBoundary.cs" />
-    <Compile Include="Linq\AnchorExpression\WordBoundary.cs" />
-    <Compile Include="Linq\AnchorExpression\PreviousMatchEnd.cs" />
-    <Compile Include="Linq\AnchorExpression\EndOfLine.cs" />
-    <Compile Include="Linq\AnchorExpression\EndOfInput.cs" />
-    <Compile Include="Linq\AnchorExpression\StartOfLine.cs" />
-    <Compile Include="Linq\AlternationExpression\IfExpression.cs" />
-    <Compile Include="Linq\AlternationExpression\GroupNumberIfExpression.cs" />
-    <Compile Include="Linq\AlternationExpression\GroupNameIfExpression.cs" />
+    <Compile Include="Linq\Anchor\AnchorExpression.cs" />
+    <Compile Include="Linq\Anchor\EndOrBeforeEndingNewLine.cs" />
+    <Compile Include="Linq\Anchor\NotWordBoundary.cs" />
+    <Compile Include="Linq\Anchor\WordBoundary.cs" />
+    <Compile Include="Linq\Anchor\PreviousMatchEnd.cs" />
+    <Compile Include="Linq\Anchor\EndOfLine.cs" />
+    <Compile Include="Linq\Anchor\EndOfInput.cs" />
+    <Compile Include="Linq\Anchor\StartOfLine.cs" />
+    <Compile Include="Linq\Alternation\IfExpression.cs" />
+    <Compile Include="Linq\Alternation\GroupNumberIfExpression.cs" />
+    <Compile Include="Linq\Alternation\GroupNameIfExpression.cs" />
     <Compile Include="Linq\AnyGroupMode.cs" />
     <Compile Include="Linq\Expression\CharacterExpression.cs" />
     <Compile Include="Linq\Expression\AsciiCharSurroundExpression.cs" />
@@ -75,19 +75,19 @@
     <Compile Include="Linq\Expression\ContainerExpression.cs" />
     <Compile Include="Linq\Expression\InlineCommentExpression.cs" />
     <Compile Include="Linq\Expression\InlineOptionsExpression.cs" />
-    <Compile Include="Linq\AlternationExpression\OrExpression.cs" />
+    <Compile Include="Linq\Alternation\OrExpression.cs" />
     <Compile Include="Linq\AsciiChar.cs" />
-    <Compile Include="Linq\AssertionExpression\AssertionExpression.cs" />
+    <Compile Include="Linq\Anchor\AssertionExpression.cs" />
     <Compile Include="Linq\AssertionKind.cs" />
     <Compile Include="Linq\Expression\TextExpression.cs" />
-    <Compile Include="Linq\QuantifierExpression\CountFromQuantifier.cs" />
-    <Compile Include="Linq\GroupExpression\BalanceGroupExpression.cs" />
+    <Compile Include="Linq\Quantifier\CountFromQuantifier.cs" />
+    <Compile Include="Linq\Group\BalanceGroupExpression.cs" />
     <Compile Include="Linq\BuildContext.cs" />
-    <Compile Include="Linq\AnchorExpression\StartOfInput.cs" />
-    <Compile Include="Linq\GroupExpression\QuantifierCapturingExpression.cs" />
+    <Compile Include="Linq\Anchor\StartOfInput.cs" />
+    <Compile Include="Linq\Group\QuantifierCapturingExpression.cs" />
     <Compile Include="Linq\PatternSettings.cs" />
     <Compile Include="Linq\CharClass.cs" />
-    <Compile Include="Linq\CharGroupExpression\CharGroupExpression.cs" />
+    <Compile Include="Linq\CharGroup\CharGroupExpression.cs" />
     <Compile Include="Linq\CharGroupItem\CharsCharItem.cs" />
     <Compile Include="Linq\CharGroupItem\CharCodeCharItem.cs" />
     <Compile Include="Linq\CharGroupItem\CharCharItem.cs" />
@@ -102,7 +102,7 @@
     <Compile Include="Linq\CharGroupItem\CharGroupItem_.cs" />
     <Compile Include="Linq\Expression\CharSubtraction.cs" />
     <Compile Include="Linq\EscapeMode.cs" />
-    <Compile Include="Linq\QuantifierExpression\CountQuantifier.cs" />
+    <Compile Include="Linq\Quantifier\CountQuantifier.cs" />
     <Compile Include="Linq\ExpressionKind.cs" />
     <Compile Include="Linq\Expressions.cs" />
     <Compile Include="Linq\Alternations.cs" />
@@ -112,27 +112,27 @@
     <Compile Include="Linq\Quantifiers.cs" />
     <Compile Include="Linq\Expression.cs" />
     <Compile Include="Linq\Expression_.cs" />
-    <Compile Include="Linq\QuantifierExpression\CountRangeQuantifier.cs" />
-    <Compile Include="Linq\GroupExpression\GroupExpression.cs" />
+    <Compile Include="Linq\Quantifier\CountRangeQuantifier.cs" />
+    <Compile Include="Linq\Group\GroupExpression.cs" />
     <Compile Include="Linq\IBaseGroup.cs" />
     <Compile Include="Linq\IdentifierBoundary.cs" />
     <Compile Include="Linq\IExcludedGroup.cs" />
-    <Compile Include="Linq\AlternationExpression\AlternationExpression.cs" />
+    <Compile Include="Linq\Alternation\AlternationExpression.cs" />
     <Compile Include="Linq\InlineOptions.cs" />
     <Compile Include="Linq\Expression\NameBackreferenceExpression.cs" />
-    <Compile Include="Linq\GroupExpression\NamedGroupExpression.cs" />
-    <Compile Include="Linq\GroupExpression\NonbacktrackingExpression.cs" />
-    <Compile Include="Linq\GroupExpression\NoncapturingExpression.cs" />
+    <Compile Include="Linq\Group\NamedGroupExpression.cs" />
+    <Compile Include="Linq\Group\NonbacktrackingExpression.cs" />
+    <Compile Include="Linq\Group\NoncapturingExpression.cs" />
     <Compile Include="Linq\Expression\NumberBackreferenceExpression.cs" />
-    <Compile Include="Linq\GroupExpression\GroupOptionsExpression.cs" />
-    <Compile Include="Linq\AlternationExpression\AnyExpression.cs" />
+    <Compile Include="Linq\Group\GroupOptionsExpression.cs" />
+    <Compile Include="Linq\Alternation\AnyExpression.cs" />
     <Compile Include="Linq\Expression\QuantifiableExpression.cs" />
-    <Compile Include="Linq\QuantifierExpression\OneManyQuantifier.cs" />
-    <Compile Include="Linq\QuantifierExpression\MaybeManyQuantifier.cs" />
-    <Compile Include="Linq\QuantifierExpression\QuantifierExpression.cs" />
+    <Compile Include="Linq\Quantifier\OneManyQuantifier.cs" />
+    <Compile Include="Linq\Quantifier\MaybeManyQuantifier.cs" />
+    <Compile Include="Linq\Quantifier\QuantifierExpression.cs" />
     <Compile Include="Linq\QuantifierKind.cs" />
-    <Compile Include="Linq\QuantifierExpression\MaybeQuantifier.cs" />
-    <Compile Include="Linq\GroupExpression\CapturingExpression.cs" />
+    <Compile Include="Linq\Quantifier\MaybeQuantifier.cs" />
+    <Compile Include="Linq\Group\CapturingExpression.cs" />
     <Compile Include="Linq\Substitutions.cs" />
     <Compile Include="Linq\Substitution\NamedGroupSubstitution.cs" />
     <Compile Include="Linq\Substitution\LastCapturedGroupSubstitution.cs" />
@@ -150,16 +150,16 @@
     <Compile Include="Linq\Expression\NotGeneralCategoryExpression.cs" />
     <Compile Include="Linq\Expression\GeneralCategoryExpression.cs" />
     <Compile Include="Linq\Expression\NamedBlockExpression.cs" />
-    <Compile Include="Linq\CharGroupExpression\CharCodeRangeGroup.cs" />
-    <Compile Include="Linq\CharGroupExpression\CharRangeGroup.cs" />
-    <Compile Include="Linq\CharGroupExpression\CharsCharGroup.cs" />
-    <Compile Include="Linq\CharGroupExpression\CharItemGroup.cs" />
-    <Compile Include="Linq\CharGroupExpression\CharCodeGroup.cs" />
-    <Compile Include="Linq\CharGroupExpression\CharGroup.cs" />
-    <Compile Include="Linq\CharGroupExpression\CharClassGroup.cs" />
-    <Compile Include="Linq\CharGroupExpression\GeneralCategoryGroup.cs" />
-    <Compile Include="Linq\CharGroupExpression\NamedBlockGroup.cs" />
-    <Compile Include="Linq\CharGroupExpression\AsciiCharGroup.cs" />
+    <Compile Include="Linq\CharGroup\CharCodeRangeGroup.cs" />
+    <Compile Include="Linq\CharGroup\CharRangeGroup.cs" />
+    <Compile Include="Linq\CharGroup\CharsCharGroup.cs" />
+    <Compile Include="Linq\CharGroup\CharItemGroup.cs" />
+    <Compile Include="Linq\CharGroup\CharCodeGroup.cs" />
+    <Compile Include="Linq\CharGroup\CharGroup.cs" />
+    <Compile Include="Linq\CharGroup\CharClassGroup.cs" />
+    <Compile Include="Linq\CharGroup\GeneralCategoryGroup.cs" />
+    <Compile Include="Linq\CharGroup\NamedBlockGroup.cs" />
+    <Compile Include="Linq\CharGroup\AsciiCharGroup.cs" />
     <Compile Include="Linq\Expression\CharExpression.cs" />
     <Compile Include="Core\CaptureItemEqualityComparer.cs" />
     <Compile Include="Core\SplitItemKind.cs" />
