--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Linq\Alternation\GroupNumberIfExpression.cs" />
     <Compile Include="Linq\Alternation\GroupNameIfExpression.cs" />
     <Compile Include="Linq\AnyGroupMode.cs" />
+    <Compile Include="Linq\Patterns.cs" />
     <Compile Include="Linq\Expression\CharacterExpression.cs" />
     <Compile Include="Linq\Expression\AsciiCharSurroundExpression.cs" />
     <Compile Include="Linq\Substitution\BeforeMatchSubstitution.cs" />
