QuantifiedExpression renamed to QuantifierExpression

--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -71,7 +71,7 @@
     <Compile Include="Linq\Expression\CharacterExpression.cs" />
     <Compile Include="Linq\Expression\AsciiCharSurroundExpression.cs" />
     <Compile Include="Linq\Quantifier\LazyQuantifierExpression.cs" />
-    <Compile Include="Linq\Quantifier\QuantifiedExpression.cs" />
+    <Compile Include="Linq\Quantifier\QuantifierExpression.cs" />
     <Compile Include="Linq\Substitution\BeforeMatchSubstitution.cs" />
     <Compile Include="Linq\Substitution\AfterMatchSubstitution.cs" />
     <Compile Include="Linq\Substitution\EntireMatchSubstitution.cs" />
