--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -51,6 +51,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Linq\Anchor\AssertBackExpression.cs" />
+    <Compile Include="Linq\Anchor\NotAssertBackExpression.cs" />
+    <Compile Include="Linq\Anchor\NotAssertExpression.cs" />
+    <Compile Include="Linq\Anchor\AssertExpression.cs" />
     <Compile Include="Linq\Expression\JoinContainerExpression.cs" />
     <Compile Include="Linq\Extensions\EnumerableExtensions.cs" />
     <Compile Include="Linq\Extensions\MatchExtensions.cs" />
@@ -84,8 +88,6 @@
     <Compile Include="Linq\Expression\InlineOptionsExpression.cs" />
     <Compile Include="Linq\Alternation\OrExpression.cs" />
     <Compile Include="Linq\AsciiChar.cs" />
-    <Compile Include="Linq\Anchor\AssertionExpression.cs" />
-    <Compile Include="Linq\AssertionKind.cs" />
     <Compile Include="Linq\Expression\TextExpression.cs" />
     <Compile Include="Linq\Quantifier\CountFromQuantifier.cs" />
     <Compile Include="Linq\Group\BalanceGroupExpression.cs" />
