--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Linq\Anchor\AssertBackExpression.cs" />
     <Compile Include="Linq\Anchor\NotAssertBackExpression.cs" />
     <Compile Include="Linq\Anchor\NotAssertExpression.cs" />
