members moved from Linq namespace

--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -88,14 +88,14 @@
     <Compile Include="Linq\Expression\ContainerExpression.cs" />
     <Compile Include="Linq\Expression\InlineCommentExpression.cs" />
     <Compile Include="Linq\Expression\InlineOptionsExpression.cs" />
-    <Compile Include="Linq\AsciiChar.cs" />
+    <Compile Include="Core\AsciiChar.cs" />
     <Compile Include="Linq\Expression\TextExpression.cs" />
     <Compile Include="Linq\Quantifier\CountFromQuantifier.cs" />
     <Compile Include="Linq\Group\BalanceGroupExpression.cs" />
     <Compile Include="Linq\PatternWriter.cs" />
     <Compile Include="Linq\Anchor\StartOfInput.cs" />
     <Compile Include="Linq\PatternSettings.cs" />
-    <Compile Include="Linq\CharClass.cs" />
+    <Compile Include="Core\CharClass.cs" />
     <Compile Include="Linq\CharGroup\CharGroupExpression.cs" />
     <Compile Include="Linq\CharGroupItem\CharactersItem.cs" />
     <Compile Include="Linq\CharGroupItem\CharCodeCharItem.cs" />
@@ -122,10 +122,10 @@
     <Compile Include="Linq\Quantifier\CountRangeQuantifier.cs" />
     <Compile Include="Linq\Group\GroupExpression.cs" />
     <Compile Include="Linq\IBaseGroup.cs" />
-    <Compile Include="Linq\IdentifierBoundary.cs" />
+    <Compile Include="Core\IdentifierBoundary.cs" />
     <Compile Include="Linq\IExcludedGroup.cs" />
     <Compile Include="Linq\Alternation\AlternationExpression.cs" />
-    <Compile Include="Linq\InlineOptions.cs" />
+    <Compile Include="Core\InlineOptions.cs" />
     <Compile Include="Linq\Expression\NameBackreferenceExpression.cs" />
     <Compile Include="Linq\Group\NamedGroupExpression.cs" />
     <Compile Include="Linq\Group\NonbacktrackingExpression.cs" />
@@ -143,9 +143,9 @@
     <Compile Include="Linq\Substitution\NamedGroupSubstitution.cs" />
     <Compile Include="Linq\Substitution\LastCapturedGroupSubstitution.cs" />
     <Compile Include="Linq\Substitution\TextSubstitution.cs" />
-    <Compile Include="Linq\Syntax.cs" />
-    <Compile Include="Linq\NamedBlock.cs" />
-    <Compile Include="Linq\GeneralCategory.cs" />
+    <Compile Include="Core\Syntax.cs" />
+    <Compile Include="Core\NamedBlock.cs" />
+    <Compile Include="Core\GeneralCategory.cs" />
     <Compile Include="Core\CharMatchInfo.cs" />
     <Compile Include="Core\RegexUtilities.cs" />
     <Compile Include="Linq\Expression\CharCodeExpression.cs" />
