--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -113,7 +113,7 @@
     <Compile Include="Linq\CharGroupItems.cs" />
     <Compile Include="Linq\CharGroupItem\CharGroupItem_.cs" />
     <Compile Include="Linq\Expression\CharSubtraction.cs" />
-    <Compile Include="Linq\EscapeMode.cs" />
+    <Compile Include="Linq\CharKind.cs" />
     <Compile Include="Linq\Quantifier\CountQuantifier.cs" />
     <Compile Include="Linq\Expressions.cs" />
     <Compile Include="Linq\Alternations.cs" />
