--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -73,7 +73,7 @@
     <Compile Include="Linq\Alternation\IfGroup.cs" />
     <Compile Include="Linq\AnyGroupMode.cs" />
     <Compile Include="Linq\Group\QuantifierGroup.cs" />
-    <Compile Include="Linq\Pattern\CharacterPattern.cs" />
+    <Compile Include="Linq\CharacterPattern\CharacterPattern.cs" />
     <Compile Include="Linq\Pattern\AsciiCharSurroundPattern.cs" />
     <Compile Include="Linq\PatternOptions.cs" />
     <Compile Include="Linq\Quantifier\LazyQuantifier.cs" />
@@ -146,14 +146,14 @@
     <Compile Include="Core\GeneralCategory.cs" />
     <Compile Include="Core\CharMatchInfo.cs" />
     <Compile Include="Core\RegexUtilities.cs" />
-    <Compile Include="Linq\Pattern\CharCodePattern.cs" />
-    <Compile Include="Linq\Pattern\AsciiCharPattern.cs" />
-    <Compile Include="Linq\Pattern\CharClassPattern.cs" />
+    <Compile Include="Linq\CharacterPattern\CharCodePattern.cs" />
+    <Compile Include="Linq\CharacterPattern\AsciiCharPattern.cs" />
+    <Compile Include="Linq\CharacterPattern\CharClassPattern.cs" />
     <Compile Include="Linq\Pattern\AnyChar.cs" />
-    <Compile Include="Linq\Pattern\NotNamedBlockPattern.cs" />
-    <Compile Include="Linq\Pattern\NotGeneralCategoryPattern.cs" />
-    <Compile Include="Linq\Pattern\GeneralCategoryPattern.cs" />
-    <Compile Include="Linq\Pattern\NamedBlockPattern.cs" />
+    <Compile Include="Linq\CharacterPattern\NotNamedBlockPattern.cs" />
+    <Compile Include="Linq\CharacterPattern\NotGeneralCategoryPattern.cs" />
+    <Compile Include="Linq\CharacterPattern\GeneralCategoryPattern.cs" />
+    <Compile Include="Linq\CharacterPattern\NamedBlockPattern.cs" />
     <Compile Include="Linq\CharGroup\CharCodeRangeGroup.cs" />
     <Compile Include="Linq\CharGroup\CharRangeGroup.cs" />
     <Compile Include="Linq\CharGroup\CharactersGroup.cs" />
@@ -164,7 +164,7 @@
     <Compile Include="Linq\CharGroup\GeneralCategoryGroup.cs" />
     <Compile Include="Linq\CharGroup\NamedBlockGroup.cs" />
     <Compile Include="Linq\CharGroup\AsciiCharGroup.cs" />
-    <Compile Include="Linq\Pattern\CharPattern.cs" />
+    <Compile Include="Linq\CharacterPattern\CharPattern.cs" />
     <Compile Include="Core\CaptureItemEqualityComparer.cs" />
     <Compile Include="Core\SplitItemKind.cs" />
     <Compile Include="Core\ResultMode.cs" />
