--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -78,8 +78,8 @@
     <Compile Include="Linq\Anchor\EndOfLine.cs" />
     <Compile Include="Linq\Anchor\EndOfInput.cs" />
     <Compile Include="Linq\Anchor\StartOfLine.cs" />
-    <Compile Include="Linq\Alternation\IfAssert.cs" />
-    <Compile Include="Linq\Alternation\IfGroup.cs" />
+    <Compile Include="Linq\Pattern\IfAssert.cs" />
+    <Compile Include="Linq\Pattern\IfGroup.cs" />
     <Compile Include="Linq\AnyGroupMode.cs" />
     <Compile Include="Linq\Group\QuantifierGroup.cs" />
     <Compile Include="Linq\CharacterPattern\CharacterPattern.cs" />
@@ -131,7 +131,7 @@
     <Compile Include="Linq\IBaseGroup.cs" />
     <Compile Include="Core\IdentifierBoundary.cs" />
     <Compile Include="Linq\IExcludedGroup.cs" />
-    <Compile Include="Linq\Alternation\AlternationPattern.cs" />
+    <Compile Include="Linq\Pattern\AlternationPattern.cs" />
     <Compile Include="Core\InlineOptions.cs" />
     <Compile Include="Linq\Pattern\NamedGroupReference.cs" />
     <Compile Include="Linq\Group\NamedGroup.cs" />
