methods removed from Patterns class

--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -96,7 +96,7 @@
     <Compile Include="Linq\Pattern\SurroundPattern.cs" />
     <Compile Include="Linq\Pattern\ContainerPattern.cs" />
     <Compile Include="Linq\Pattern\InlineComment.cs" />
-    <Compile Include="Linq\Pattern\InlineOptionsPattern.cs" />
+    <Compile Include="Linq\Pattern\Options.cs" />
     <Compile Include="Core\AsciiChar.cs" />
     <Compile Include="Linq\Pattern\TextPattern.cs" />
     <Compile Include="Linq\Quantifier\CountFromQuantifier.cs" />
