--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -53,11 +53,14 @@
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Linq\Anchor\AssertBack.cs" />
+    <Compile Include="Linq\Anchor\EndOfLineOrBeforeCarriageReturnInvariant.cs" />
+    <Compile Include="Linq\Anchor\EndOfLineOrBeforeCarriageReturn.cs" />
     <Compile Include="Linq\Anchor\EndOfLineInvariant.cs" />
     <Compile Include="Linq\Anchor\NotAssertBack.cs" />
     <Compile Include="Linq\Anchor\NotAssert.cs" />
     <Compile Include="Linq\Anchor\Assert.cs" />
     <Compile Include="Linq\Anchor\StartOfLineInvariant.cs" />
+    <Compile Include="Linq\Anchor\Word.cs" />
     <Compile Include="Linq\CharEscapeMode.cs" />
     <Compile Include="Linq\Group\CountTo.cs" />
     <Compile Include="Linq\Group\CountFrom.cs" />
@@ -122,9 +125,7 @@
     <Compile Include="Linq\Pattern\CharSubtraction.cs" />
     <Compile Include="Linq\Quantifier\CountQuantifier.cs" />
     <Compile Include="Linq\Patterns.cs" />
-    <Compile Include="Linq\Anchors.cs" />
     <Compile Include="Linq\Chars.cs" />
-    <Compile Include="Linq\Groups.cs" />
     <Compile Include="Linq\Pattern.cs" />
     <Compile Include="Linq\Pattern_.cs" />
     <Compile Include="Linq\Quantifier\CountRangeQuantifier.cs" />
