--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -146,7 +146,7 @@
     <Compile Include="Linq\Group\NamedGroup.cs" />
     <Compile Include="Linq\Group\NonbacktrackingGroup.cs" />
     <Compile Include="Linq\Group\NoncapturingGroup.cs" />
-    <Compile Include="Linq\Pattern\NumberedGroupReference.cs" />
+    <Compile Include="Linq\Pattern\GroupNumberReference.cs" />
     <Compile Include="Linq\Group\GroupOptions.cs" />
     <Compile Include="Linq\Group\AnyGroup.cs" />
     <Compile Include="Linq\Pattern\QuantifiablePattern.cs" />
