--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Linq\Character\WhiteSpace.cs" />
     <Compile Include="Linq\Character\NotDigit.cs" />
     <Compile Include="Linq\Character\Digit.cs" />
-    <Compile Include="Linq\CharEscapeMode.cs" />
+    <Compile Include="Core\CharEscapeMode.cs" />
     <Compile Include="Linq\Group\CountTo.cs" />
     <Compile Include="Linq\Group\CountFrom.cs" />
     <Compile Include="Linq\Group\Count.cs" />
