--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -73,8 +73,8 @@
     <Compile Include="Linq\Pattern\OrContainer.cs" />
     <Compile Include="Linq\Pattern\JoinContainer.cs" />
     <Compile Include="Linq\Pattern\AssertSurround.cs" />
-    <Compile Include="Linq\Extensions\EnumerableExtensions.cs" />
-    <Compile Include="Linq\Extensions\MatchExtensions.cs" />
+    <Compile Include="Extensions\EnumerableExtensions.cs" />
+    <Compile Include="Extensions\MatchExtensions.cs" />
     <Compile Include="Linq\Anchor\EndOrBeforeEndingNewLine.cs" />
     <Compile Include="Linq\Anchor\NotWordBoundary.cs" />
     <Compile Include="Linq\Anchor\WordBoundary.cs" />
@@ -182,7 +182,7 @@
     <Compile Include="Core\SplitContext.cs" />
     <Compile Include="Core\SplitItem.cs" />
     <Compile Include="Core\GroupInfoIndexEqualityComparer.cs" />
-    <Compile Include="Core\Extensions.cs" />
+    <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Core\ReplaceResult.cs" />
     <Compile Include="Core\SplitItemCollection.cs" />
     <Compile Include="Core\ReplaceItemCollection.cs" />
@@ -199,7 +199,7 @@
     <Compile Include="Core\GroupItemEqualityComparer.cs" />
     <Compile Include="Core\MatchItemEqualityComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Linq\Extensions\RegexExtensions.cs" />
+    <Compile Include="Extensions\RegexExtensions.cs" />
     <Compile Include="Core\ReplaceData.cs" />
     <Compile Include="Core\ReplaceItem.cs" />
     <Compile Include="Core\SplitData.cs" />
