--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -84,7 +84,7 @@
     <Compile Include="Linq\Anchor\StartOfLine.cs" />
     <Compile Include="Linq\Pattern\IfAssert.cs" />
     <Compile Include="Linq\Pattern\IfGroup.cs" />
-    <Compile Include="Linq\AnyGroupMode.cs" />
+    <Compile Include="Linq\GroupMode.cs" />
     <Compile Include="Linq\Group\QuantifiedGroup.cs" />
     <Compile Include="Linq\Character\CharacterPattern.cs" />
     <Compile Include="Linq\Pattern\AsciiCharSurroundPattern.cs" />
