--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -63,12 +63,12 @@
     <Compile Include="Linq\Character\NotDigit.cs" />
     <Compile Include="Linq\Character\Digit.cs" />
     <Compile Include="Core\CharEscapeMode.cs" />
-    <Compile Include="Linq\Group\CountTo.cs" />
-    <Compile Include="Linq\Group\CountFrom.cs" />
-    <Compile Include="Linq\Group\Count.cs" />
-    <Compile Include="Linq\Group\OneMany.cs" />
-    <Compile Include="Linq\Group\MaybeMany.cs" />
-    <Compile Include="Linq\Group\Maybe.cs" />
+    <Compile Include="Linq\Group\CountToGroup.cs" />
+    <Compile Include="Linq\Group\CountFromGroup.cs" />
+    <Compile Include="Linq\Group\CountGroup.cs" />
+    <Compile Include="Linq\Group\OneManyGroup.cs" />
+    <Compile Include="Linq\Group\MaybeManyGroup.cs" />
+    <Compile Include="Linq\Group\MaybeGroup.cs" />
     <Compile Include="Linq\Pattern\NotAssertSurround.cs" />
     <Compile Include="Linq\Pattern\OrContainer.cs" />
     <Compile Include="Linq\Pattern\JoinContainer.cs" />
