--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Linq\Character\NotDigit.cs" />
     <Compile Include="Linq\Character\Digit.cs" />
     <Compile Include="Core\CharEscapeMode.cs" />
+    <Compile Include="Linq\CharGroup\GroupCharGroup.cs" />
     <Compile Include="Linq\Group\CountToGroup.cs" />
     <Compile Include="Linq\Group\CountFromGroup.cs" />
     <Compile Include="Linq\Group\CountGroup.cs" />
