Assert renamed to Assertion

--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -52,10 +52,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Linq\Anchor\AssertBack.cs" />
-    <Compile Include="Linq\Anchor\NotAssertBack.cs" />
-    <Compile Include="Linq\Anchor\NotAssert.cs" />
-    <Compile Include="Linq\Anchor\Assert.cs" />
+    <Compile Include="Linq\Anchor\BackAssertion.cs" />
+    <Compile Include="Linq\Anchor\NegativeBackAssertion.cs" />
+    <Compile Include="Linq\Anchor\NegativeAssertion.cs" />
+    <Compile Include="Linq\Anchor\Assertion.cs" />
     <Compile Include="Linq\Character\NotWordChar.cs" />
     <Compile Include="Linq\Character\WordChar.cs" />
     <Compile Include="Linq\Character\NotWhiteSpace.cs" />
