--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -63,6 +63,9 @@
     <Compile Include="Linq\Character\NotDigit.cs" />
     <Compile Include="Linq\Character\Digit.cs" />
     <Compile Include="Core\CharEscapeMode.cs" />
+    <Compile Include="Linq\CharGroup\GeneralCategoryCharGroup.cs" />
+    <Compile Include="Linq\CharGroup\NamedBlockCharGroup.cs" />
+    <Compile Include="Linq\CharGroup\CharClassCharGroup.cs" />
     <Compile Include="Linq\CharGroup\GroupCharGroup.cs" />
     <Compile Include="Linq\Group\CountToGroup.cs" />
     <Compile Include="Linq\Group\CountFromGroup.cs" />
@@ -70,6 +73,7 @@
     <Compile Include="Linq\Group\OneManyGroup.cs" />
     <Compile Include="Linq\Group\MaybeManyGroup.cs" />
     <Compile Include="Linq\Group\MaybeGroup.cs" />
+    <Compile Include="Linq\IInvertible.cs" />
     <Compile Include="Linq\Pattern\NotAssertSurround.cs" />
     <Compile Include="Linq\Pattern\OrContainer.cs" />
     <Compile Include="Linq\Pattern\JoinContainer.cs" />
